asserts\feat(build): #2982.16 other jobs
- Adapt jobs and provisioners for build, deploy and
pages jobs
- Deactivate skims pages in order to give asserts priority
on gitlab pages


Former-commit-id: 83b1b09050074585fdcdb07043d0a88a20aa944d

--- a/asserts/.gitlab-ci.yml
+++ b/asserts/.gitlab-ci.yml
@@ -257,3 +257,33 @@ asserts_test_api_utils:
   <<: *with_nix
   <<: *in_dev_branch_asserts
   stage: test-code
+
+asserts_test_output:
+  <<: *with_nix
+  <<: *in_dev_branch_asserts
+  stage: test-code
+
+asserts_build:
+  <<: *with_nix
+  <<: *in_dev_branch_asserts
+  stage: test-code
+  artifacts:
+    paths: [asserts/asserts-release/]
+
+asserts_release_pypi:
+  <<: *with_nix
+  <<: *in_master_branch_asserts
+  stage: deploy-infra
+
+asserts_release_docker_hub:
+  <<: *with_nix
+  <<: *in_master_branch_asserts
+  stage: deploy-app
+  needs: [asserts_release_pypi]
+
+pages:
+  <<: *with_nix
+  <<: *in_master_branch_asserts
+  stage: deploy-app
+  artifacts:
+    paths: [asserts/public/]
