--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,6 +2,7 @@ include:
   - local: asserts/.gitlab-ci.yml
   - local: forces/.gitlab-ci.yml
   - local: integrates/.gitlab-ci.yml
+  - local: melts/.gitlab-ci.yml
   - local: observes/.gitlab-ci.yml
   - local: reviews/.gitlab-ci.yml
   - local: serves/.gitlab-ci.yml
