serves\refac(build): #2985 exclude sonarcloud coverage
- every product manages its coverage and it is calculated in their
own pipelines, so it can not be globally computed for
sonarcloud for every push or merge pipeline


Former-commit-id: 7896e371ad8e5ab327d0c70e83781c946b24537d

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -22,5 +22,10 @@ sonar.cpd.exclusions=\
     integrates/front/**/*,\
     integrates/mobile/**/*
 
+# Coverage exclusions
+# every product manages its own coverage
+sonar.coverage.exclusions=\
+    **/**
+
 # Encoding of the source code. Default is default system encoding
 sonar.sourceEncoding=UTF-8
