skims\feat(back): #2975.194 proxies and dev url
- Allow Skims to pass requests to a proxy
  and to query the dev url which requires
  ssl-no-verify


Former-commit-id: 64bc26723de8ede18c2467b1821274b65cad3ca8

--- a/skims/pyproject.toml
+++ b/skims/pyproject.toml
@@ -40,7 +40,7 @@ version = "1.0.0"
 [tool.poetry.dependencies]
 aioextensions = "20.8.1478538"
 aiofiles = "0.5.0"
-aiogqlc = "1.0.5"
+aiogqlc = "2.0.0b1"
 aiohttp = "3.6.2"
 bugsnag = "3.8.0"
 click = "7.1.2"
