--- a/forces/pyproject.toml
+++ b/forces/pyproject.toml
@@ -15,13 +15,13 @@ aiohttp = "3.6.2"
 click = "7.1.2"
 python-dateutil = "2.8.1"
 gitpython = "3.1.7"
-gql = "3.0.0a1"
 oyaml = "0.9"
 python-jose = "3.1.0"
 python = "^3.8"
 uvloop = "0.14.0"
 pytz = "2020.1"
 bugsnag = "3.7.1"
+aiogqlc = "2.0.0b1"
 
 [tool.poetry.dev-dependencies]
 prospector = "1.2.0"
@@ -29,6 +29,8 @@ mypy = "0.770"
 pytest = "5.4.3"
 pytest-asyncio = "0.14.0"
 pytest-cov = "2.10.0"
+yapf = "0.30.0"
+django = "3.1"
 
 [build-system]
 requires = ["poetry>=0.12"]
