forces\rever(back): #197.2 delete break build
Former-commit-id: 0a4a9c53ac01017be72bb331c1d35987f5099dcd

--- a/forces/Dockerfile
+++ b/forces/Dockerfile
@@ -1,23 +1,11 @@
-FROM python:3.8-slim-buster as forces
+FROM python:3.8-slim-buster
 
 RUN apt update
 
-RUN apt -y install git curl
-
-RUN curl -fsSL https://get.docker.com -o get-docker.sh && sh get-docker.sh
+RUN apt -y install git
 
 COPY . /pakage
 
 WORKDIR /pakage
 
 RUN pip install .
-
-FROM forces as break_build
-
-RUN pip install boto3
-
-WORKDIR /forces
-
-COPY break_build.py .
-
-ENTRYPOINT ["python3", "/forces/break_build.py"]
