observes\feat(job): #3009.2 glue functions
Former-commit-id: 6d9604756d1241347c5e36eb0d77ba29ed285e75

--- a/.gitlab/CODEOWNERS
+++ b/.gitlab/CODEOWNERS
@@ -17,5 +17,6 @@
 /integrates/mobile/tslint.json @mnorenaatfluid @kamadoatfluid @jrestrepoatfluid
 
 /forces/ @drestrepoatfluid @jrestrepoatfluid @kamadoatfluid
+/observes/ @drestrepoatfluid @jrestrepoatfluid @kamadoatfluid
 /skims/ @drestrepoatfluid @jrestrepoatfluid @kamadoatfluid @mnorenaatfluid @ralvarezatfluid
 /sorts/ @jrestrepoatfluid @kamadoatfluid @acuberosatfluid
