observes\feat(job): #3009.3 build system
Former-commit-id: 56192886e4e547be815330d40defaf0f95c2c0e2

--- a/observes/.gitlab-ci.yml
+++ b/observes/.gitlab-ci.yml
@@ -164,6 +164,15 @@ observes_git_upload:
     variables: [$observes_git_upload]
   interruptible: false
 
+observes_code:
+  <<: *with_nix_serial
+  only:
+    refs: [schedules]
+    variables: [$observes_code]
+  stage: analytics
+  tags: [autoscaling-large]
+  interruptible: false
+
 observes_timedoctor_refresh_token:
   <<: *with_nix
   stage: analytics
