integrates\refac(front): #67.4 remove unnecessary code
- old google auth cleanup
- accurate naming for google constants


Former-commit-id: 4ac2bf9646c19c7f3a28a8e148ede645824a2cac

--- a/integrates/mobile/app.json
+++ b/integrates/mobile/app.json
@@ -44,7 +44,7 @@
     },
     "name": "Integrates",
     "notification": {
-      "color": "#fe3435",
+      "color": "#FE3435",
       "icon": "./assets/notification.png"
     },
     "orientation": "portrait",
