serves\refac(build): #2985.5 exclude asserts analysis
Former-commit-id: 747a3547a973a2fac1cdc0e55b98437d566207b0

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -12,7 +12,7 @@ sonar.projectName=product
 sonar.exclusions=\
     integrates/app/migrations/**/*,\
     skims/test/data/**/*,\
-    asserts/test/static/**/*
+    asserts/**/*
 
 # Exclusion for duplications
 sonar.cpd.exclusions=\
