melts\feat(build): #3005.2 add linting job
- Add prospector job to lint code in Melts.
- Check static typing in Sorts.
- These do not break the build yet, the upcoming MRs will fix
  the files and enable this feature.


Former-commit-id: 3c3be97e27b383934126513d01e976158fc8c4f9

--- a/melts/.gitlab-ci.yml
+++ b/melts/.gitlab-ci.yml
@@ -29,3 +29,8 @@
     - if: '$CI_PIPELINE_SOURCE == "trigger"'
       when: never
     - if: *melts_commit_pattern
+
+melts_lint_code:
+  <<: *with_nix
+  <<: *in_dev_branch_melts
+  stage: lint-code
