--- a/integrates/.gitlab-ci.yml
+++ b/integrates/.gitlab-ci.yml
@@ -201,6 +201,7 @@ integrates_build_mobile_android:
   <<: *with_nix
   <<: *in_master_branch_integrates
   stage: build
+  needs: [integrates_deploy_mobile_ota]
   tags: [autoscaling-large]
   artifacts:
     expire_in: 1 day
@@ -292,7 +293,7 @@ integrates_deploy_k8s_stop_ephemeral:
 integrates_deploy_mobile_ota:
   <<: *with_nix
   <<: *in_everywhere_except_periodic_jobs_and_mrs_integrates
-  stage: deploy-app
+  stage: pre-build
 
 integrates_deploy_mobile_playstore:
   <<: *with_nix
