reviews\feat(build): #3004.8 reviews pkgs
- Add reviews pkgs and make all provisioners to use them
- Add extra config to integrates pkgs
- Move pages provisioner to use asserts pkgs


Former-commit-id: 140bd69d82b290af55f40dbad587488b61d1e5f6

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -82,7 +82,7 @@ common_build_nix_caches:
   interruptible: false
   only:
     refs: [schedules]
-    variables: [$build_nix_caches]
+    variables: [$common_build_nix_caches]
 
 common_lint_build_system:
   <<: *with_nix
