--- a/observes/.gitlab-ci.yml
+++ b/observes/.gitlab-ci.yml
@@ -192,7 +192,7 @@ observes_timedoctor_backup:
 
 observes_services_repositories_cache:
   <<: *with_nix
-  tags: [autoscaling-analytics]
+  tags: [autoscaling-large]
   stage: analytics
   only:
     refs: [schedules]
