serves\feat(infra): #3024.1 grant observes delete access
- So observes can populate the s3 repositories succesfully
- Fix noisy pipeline warnings


Former-commit-id: c15561861266e6c7c656510e4862fb366acc98e7

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,6 +26,10 @@ stages:
   - external
   - scheduler
 
+workflow:
+  rules:
+    - when: always
+
 .common_in_mrs: &common_in_mrs
   rules:
     - if: '$CI_PIPELINE_SOURCE != "merge_request_event"'
