--- a/reviews.toml
+++ b/reviews.toml
@@ -26,7 +26,7 @@ platform = 'gitlab'
   [tests.most_relevant_type]
     fail = true
     close_mr = true
-    commit_regex = '^(?:all|asserts|forces|integrates|observes|reviews|serves|skims|sorts|melts|teaches)\\(\w*)\((\w*)\):\s(#[1-9]\d*)(.\d+)?\s(.*)$'
+    commit_regex = '^(?:all|asserts|common|forces|integrates|observes|reviews|serves|skims|sorts|melts|teaches)\\(\w*)\((\w*)\):\s(#[1-9]\d*)(.\d+)?\s(.*)$'
     [tests.most_relevant_type.relevances]
       rever = 1
       feat = 2
