--- a/melts/requirements.txt
+++ b/melts/requirements.txt
@@ -6,10 +6,10 @@ boto3==1.12.40
 botocore==1.15.40
 click==7.1.2
 frozendict==1.2
+mypy_extensions==0.4.3
 numpy==1.18.2
 pandas==1.0.3
 progress==1.5
-prospector[with_everything]==1.2.0
 pydriller==1.13
 pykwalify==1.7.0
 pynamodb==4.3.1
