observes\feat(job): #3038.2 add new job for dynamo
- this job runs streamer-dynamodb and tap-json to allow nested objects


Former-commit-id: 32ec5d5036930341978ad16f8ce8b78fc4c3c9e1

--- a/observes/.gitlab-ci.yml
+++ b/observes/.gitlab-ci.yml
@@ -71,6 +71,15 @@ observes_dynamodb:
     variables: [$observes_dynamodb]
   interruptible: false
 
+observes_dynamo:
+  <<: *with_nix
+  tags: [autoscaling-analytics]
+  stage: analytics
+  only:
+    refs: [schedules]
+    variables: [$observes_dynamo]
+  interruptible: false
+
 observes_services_toe:
   <<: *with_nix
   tags: [autoscaling-analytics]
