--- a/forces/pyproject.toml
+++ b/forces/pyproject.toml
@@ -22,6 +22,7 @@ uvloop = "0.14.0"
 pytz = "2020.1"
 bugsnag = "3.7.1"
 aiogqlc = "2.0.0b1"
+more-itertools = "8.5.0"
 
 [tool.poetry.dev-dependencies]
 prospector = "1.2.0"
