integrates\test(back): #3022.1 functional test job
- Added a job for funtional test in back


Former-commit-id: b8a926a27ce47092904537c905ef5f254fef2461

--- a/integrates/.gitlab-ci.yml
+++ b/integrates/.gitlab-ci.yml
@@ -333,6 +333,12 @@ integrates_deploy_front:
   stage: deploy-app
   needs: [integrates_build_front]
 
+integrates_functional_tests_back:
+  <<: *with_nix
+  <<: *in_dev_and_master_branch_integrates
+  stage: test-code
+  retry: 1
+
 integrates_functional_tests_dev:
   <<: *with_nix
   <<: *in_dev_branch_integrates
