integrates\feat(front): #56.5 add news widget
Former-commit-id: 4db2148fccf0f54a6116c045c784d31c166c6c69

--- a/integrates/front/.eslintignore
+++ b/integrates/front/.eslintignore
@@ -6,5 +6,6 @@ src/scenes/Dashboard/**/*.*
 !src/scenes/Dashboard/*.*
 !src/scenes/Dashboard/components/APITokenModal/**
 !src/scenes/Dashboard/components/AddEnvironmentsModal/**
+!src/scenes/Dashboard/components/NewsWidget/**
 src/**/*.css.d.ts
 src/**/*.d.ts
