--- a/skims/static/ast/build.gradle
+++ b/skims/static/ast/build.gradle
@@ -13,12 +13,12 @@ dependencies {
 }
 
 application {
-    mainClassName = 'ast.App'
+    mainClassName = 'Ast'
 }
 
 jar {
     manifest {
-        attributes "Main-Class": "com.fluidattacks.skims.ast.Ast"
+        attributes "Main-Class": "Ast"
     }
 
     from {
