skims\feat(back): #2975.218 json based ipc
- Add a JSON based interprocess communication


Former-commit-id: ac213422ae0d66467490d95e31ae844ac210bee7

--- a/skims/pyproject.toml
+++ b/skims/pyproject.toml
@@ -28,6 +28,7 @@ packages = [
   { include = "integrates", from = "skims" },
   { include = "lib_path", from = "skims" },
   { include = "nvd", from = "skims" },
+  { include = "parse_grammar", from = "skims" },
   { include = "parse_json", from = "skims" },
   { include = "state", from = "skims" },
   { include = "utils", from = "skims" },
