serves\feat(infra): #56.4 allow headwayapp csp
Former-commit-id: 999e738dc02d7dea8fe34e64f785a84378a0ac80

--- a/serves/infrastructure/eks/manifests/ingress/main-domains.yaml
+++ b/serves/infrastructure/eks/manifests/ingress/main-domains.yaml
@@ -24,7 +24,8 @@ metadata:
       set $CSP '${CSP} *.formstack.com *.jquery.com *.bootstrapcdn.com';    # Forms functionalities
       set $CSP '${CSP} *.d2yyd1h5u9mauk.cloudfront.net';	            # Delighted
       set $CSP '${CSP} *.zdassets.com';	        # Zendesk Widget
-      set $CSP '${CSP} *.cookiebot.com';        # Cookie consent
+      set $CSP '${CSP} cdn.headwayapp.co';      # News widget
+      set $CSP '${CSP} *.lr-ingest.io';	        # LogRocket cdn
       set $CSP '${CSP} *.lr-ingest.io';	        # LogRocket cdn
       set $CSP '${CSP}; worker-src blob:';      # LogRocket workers
 
