--- a/skims/pyproject.toml
+++ b/skims/pyproject.toml
@@ -53,7 +53,7 @@ pillow = "7.2.0"
 pyparsing = "2.4.7"
 python = "^3.8"
 requests = "2.24.0"
-ruamel-yaml = "0.16.10"
+"ruamel.yaml" = "0.16.10"
 semver = "2.10.2"
 uvloop = "0.14.0"
 
