observes\feat(job): #2999.2 especify retries
- use aioboto3


Former-commit-id: 2b757910791d28ebd706ea6945f510e7424dae31

--- a/observes/singer/streamer_dynamodb/pyproject.toml
+++ b/observes/singer/streamer_dynamodb/pyproject.toml
@@ -8,9 +8,10 @@ packages = [
 ]
 
 [tool.poetry.dependencies]
-python = "^3.7"
-boto3 = "1.14.50"
-boto3-type-annotations = "0.3.1"
+python = "^3.6"
+aioboto3 = "8.0.5"
+aioextensions = "20.8.2087641"
+aiomultiprocess = "0.8.0"
 
 [tool.poetry.scripts]
 streamer-dynamodb = 'streamer_dynamodb:main'
