melts\feat(build): #2984.12 add test jobs
- add test jobs
- skiping outdate tests
- no-deltas-test


Former-commit-id: 14c1c64d89991912594da25cd4453f0ec659626e

--- a/melts/.gitlab-ci.yml
+++ b/melts/.gitlab-ci.yml
@@ -34,3 +34,8 @@ melts_lint_code:
   <<: *with_nix
   <<: *in_dev_branch_melts
   stage: lint-code
+
+melts_test:
+  <<: *with_nix
+  <<: *in_dev_branch_melts
+  stage: test-code
