integrates\refac(back): #3032.23 app port
- Move app port from 80 to 8080
- Add 192.168.*.* to allowed hosts


Former-commit-id: 0e5b146ec3d26ddcb952644b9b7c70829e29e667

--- a/integrates/deploy/ephemeral/deploy-integrates.yaml
+++ b/integrates/deploy/ephemeral/deploy-integrates.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   ports:
   - port: 80
-    targetPort: 80
+    targetPort: 8080
   selector:
     app: integrates-__DEPLOYMENT_NAME__
 ---
@@ -38,13 +38,13 @@ spec:
           - secretRef:
               name: env-secret-__DEPLOYMENT_NAME__
         ports:
-        - containerPort: 443
+        - containerPort: 8080
         readinessProbe:
           exec:
             command:
               - sh
               - -ce
-              - "curl -sS http://localhost | grep 'FluidIntegrates'"
+              - "curl -sS http://localhost:8080 | grep 'FluidIntegrates'"
           initialDelaySeconds: 20
           periodSeconds: 5
           successThreshold: 3
