--- a/integrates/deploy/ephemeral/deployment.yaml
+++ b/integrates/deploy/ephemeral/deployment.yaml
@@ -33,13 +33,13 @@ spec:
             - secretRef:
                 name: integrates-__DEPLOYMENT_NAME__
           ports:
-            - containerPort: 443
+            - containerPort: 8080
           readinessProbe:
             exec:
               command:
                 - sh
                 - -ce
-                - "curl -sS http://localhost | grep 'FluidIntegrates'"
+                - "curl -sS http://localhost:8080 | grep 'FluidIntegrates'"
             initialDelaySeconds: 20
             periodSeconds: 5
             successThreshold: 3
