integrates\fix(back): #3032.24 right port
- Add right port to prod readiness probe


Former-commit-id: ec25c2e8e92ad8dc673d1bf90d660ca80e341aa6

--- a/integrates/deploy/integrates-k8s.yaml
+++ b/integrates/deploy/integrates-k8s.yaml
@@ -49,13 +49,13 @@ spec:
               fieldRef:
                 fieldPath: status.hostIP
         ports:
-        - containerPort: 80
+        - containerPort: 8080
         readinessProbe:
           exec:
             command:
               - sh
               - -ce
-              - "curl -sS http://localhost | grep 'FluidIntegrates'"
+              - "curl -sS http://localhost:8080 | grep 'FluidIntegrates'"
           initialDelaySeconds: 20
           periodSeconds: 5
           successThreshold: 3
@@ -83,6 +83,6 @@ metadata:
 spec:
   ports:
   - port: 80
-    targetPort: 80
+    targetPort: 8080
   selector:
     app: integrates-app
