integrates\fix(job): #44.5 add missing image
Former-commit-id: 5ba8cd57b6b638b6878fa5669b5264dd928c13d2

--- a/integrates/.gitlab-ci.yml
+++ b/integrates/.gitlab-ci.yml
@@ -358,6 +358,7 @@ integrates_functional_tests_dev:
 integrates_functional_tests_prod:
   <<: *with_nix
   <<: *in_master_branch_integrates
+  image: "${CI_REGISTRY_IMAGE}/nix:integrates_functional_tests_prod"
   needs:
     - integrates_deploy_k8s_back
     - integrates_deploy_front
