--- a/melts/.gitlab-ci.yml
+++ b/melts/.gitlab-ci.yml
@@ -28,6 +28,8 @@
       when: never
     - if: '$CI_PIPELINE_SOURCE == "trigger"'
       when: never
+    - if: '$CI_PIPELINE_SOURCE == "merge_request_event"'
+      when: never
     - if: *melts_commit_pattern
 
 melts_lint_code:
@@ -39,3 +41,8 @@ melts_test:
   <<: *with_nix
   <<: *in_dev_branch_melts
   stage: test-code
+
+melts_deploy:
+  <<: *with_nix
+  <<: *in_master_branch_melts
+  stage: deploy-app
