integrates\feat(back): #3032.26 new ephemeral
- Turn on new ephemerals
- Make selenium tests to run on new ephemerals
- Adapt mobile to new ephemeral subdomain


Former-commit-id: 959572a91703702ed3ef39b9f683779f8dfeb7fb

--- a/integrates/.gitlab-ci.yml
+++ b/integrates/.gitlab-ci.yml
@@ -242,6 +242,16 @@ integrates_clean_registries:
   <<: *in_schedule_nightly_build_integrates
   stage: post-deploy
 
+integrates_ephemeral_deploy:
+  <<: *with_nix
+  <<: *in_dev_branch_integrates
+  stage: deploy-app
+  needs: [integrates_build_container_app]
+  retry: 1
+  environment:
+    name: "ephemeral/$CI_COMMIT_REF_SLUG"
+    url: "https://$CI_COMMIT_REF_SLUG.integrates.fluidattacks.com/integrates"
+
 integrates_deploy_k8s_back_ephemeral:
   <<: *with_nix
   <<: *in_dev_branch_integrates
