--- a/integrates/deploy/ephemeral/variables.yaml
+++ b/integrates/deploy/ephemeral/variables.yaml
@@ -1,7 +1,8 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: env-secret-__DEPLOYMENT_NAME__
+  name: integrates-__DEPLOYMENT_NAME__
+  namespace: ephemeral
 type: Opaque
 data:
   AWS_ACCESS_KEY_ID: __B64_AWS_ACCESS_KEY_ID__
