serves\feat(build): #3032.31 test jobs provisioner
- Add job for testing that every provisioner has an
associated job


Former-commit-id: b24e096e010d54ad10a9ef74bd318de873607b47

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -99,6 +99,11 @@ common_lint_commit_msg:
   <<: *common_in_dev_branch
   stage: lint-code
 
+common_test_jobs_provisioner:
+  <<: *with_nix
+  <<: *common_in_dev_branch
+  stage: test-code
+
 common_mailmap_linter:
   <<: *with_nix
   <<: *common_in_dev_branch
