integrates\feat(build): #3032.32 clean ephemerals
- Add nightly build job for cleaning ephemeral environments
from cluster


Former-commit-id: 9a9c88cce6a519321631fd61c45f352eb5a72f1f

--- a/integrates/.gitlab-ci.yml
+++ b/integrates/.gitlab-ci.yml
@@ -237,10 +237,10 @@ integrates_coverage_report:
   stage: external
   retry: 1
 
-integrates_clean_registries:
+integrates_ephemeral_clean:
   <<: *with_nix
   <<: *in_schedule_nightly_build_integrates
-  stage: post-deploy
+  stage: rotation
 
 integrates_ephemeral_deploy:
   <<: *with_nix
