integrates\feat(back): #3032.34 worker group label
- Add worker group label so deployments can use it
as nodeSelector
- Make epehemeral deployments run in large worker group


Former-commit-id: 4e3594848d84bebd73e115bf7040b2d1d322192f

--- a/integrates/deploy/ephemeral/deployment.yaml
+++ b/integrates/deploy/ephemeral/deployment.yaml
@@ -13,6 +13,8 @@ spec:
       labels:
         app: integrates-__DEPLOYMENT_NAME__
     spec:
+      nodeSelector:
+        worker_group: large
       containers:
         - name: integrates
           image: registry.gitlab.com/fluidattacks/product/app:__DEPLOYMENT_NAME__
