--- a/integrates/deploy/production/service.yaml
+++ b/integrates/deploy/production/service.yaml
@@ -4,8 +4,10 @@ metadata:
   name: integrates-master
   namespace: production
 spec:
+  type: NodePort
   ports:
   - port: 80
     targetPort: 8080
+    protocol: TCP
   selector:
     app: integrates-master
