skims\test(back): #2975.235 split tests
- In an attempt to improve success ratio and stability
- Solve indeterminism in a job by escaping a regex
- Make interruptible the sonarcloud check so the pipeline
  can be canceled after a git push avoiding unnecesary extra machine
  consumption
- Patch stdin and stderr and avoid running skims as a subprocess
  because there seems to be a bug between pytest and the CI runner
  that causes it to hangout misteriously
- no-deltas-test


Former-commit-id: c981f225a84ed43e9665e7ce260a68ef3e56632c

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -136,6 +136,7 @@ common_forces:
 
 common_sonarcloud_check:
   <<: *common_in_dev_and_master_branch
+  interruptible: true
   variables:
     SONAR_USER_HOME: "${CI_PROJECT_DIR}/.sonar"  # Defines the location of the analysis task cache
     GIT_DEPTH: "0"  # Tells git to fetch all the branches of the project, required by the analysis task
