integrates\style(front): #1098.1 typescript routes
- Add paths to tsconfig
- Add paths to webpack.common
- Add exception to tslint
- Add exception to jest


Former-commit-id: 64946dde28cc73fa25dd832bb4e470a8b54fba9b

--- a/integrates/front/tsconfig.json
+++ b/integrates/front/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "allowJs": false,
+    "baseUrl": "src",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "jsx": "react",
@@ -10,6 +11,16 @@
     ],
     "module": "CommonJS",
     "moduleResolution": "node",
+    "paths": {
+      "components/*": [ "components/*" ],
+      "graphics/*": [ "graphics/*" ],
+      "resources/*": [ "resources/*" ],
+      "scenes/*": [ "scenes/*" ],
+      "store/*": [ "store/*" ],
+      "styles/*": [ "styles/*" ],
+      "typings/*": [ "typings/*" ],
+      "utils/*": [ "utils/*" ],
+    },
     "noEmit": true,
     "skipLibCheck": true,
     "strict": true,
