serves\refac(build): #3032.40 integrates prod rotation
- Temporarily disable integrates prod rotation
in order to keep integrates replicas running
in the old cluster


Former-commit-id: bfa2dca265a4e291be94e219420ff4e09b028331

--- a/serves/.gitlab-ci.yml
+++ b/serves/.gitlab-ci.yml
@@ -103,7 +103,7 @@ serves_test_user_provision_integrates_dev:
   <<: *serves_in_dev_branch
   stage: test-infra
 
-serves_test_user_provision_integrates_prod:
+.serves_test_user_provision_integrates_prod:
   <<: *with_nix
   <<: *serves_in_dev_branch
   stage: test-infra
