observes\feat(job): #3038.5 use autoscaling large
Former-commit-id: 6e41f4b322787159653f326779ae12209713abdf

--- a/observes/.gitlab-ci.yml
+++ b/observes/.gitlab-ci.yml
@@ -73,7 +73,7 @@ observes_dynamodb:
 
 observes_dynamo:
   <<: *with_nix
-  tags: [autoscaling-analytics]
+  tags: [autoscaling-large]
   stage: analytics
   only:
     refs: [schedules]
