integrates\refac(cross): #3032.44 remove subfolder
- Remove subfolder for new integrates


Former-commit-id: 570cf37230eb2afb632e86cc4195f7cf671a86cd

--- a/integrates/.gitlab-ci.yml
+++ b/integrates/.gitlab-ci.yml
@@ -250,7 +250,7 @@ integrates_deploy_back_ephemeral:
   retry: 1
   environment:
     name: "ephemeral/$CI_COMMIT_REF_SLUG"
-    url: "https://$CI_COMMIT_REF_SLUG.integrates.fluidattacks.com/integrates"
+    url: "https://$CI_COMMIT_REF_SLUG.integrates.fluidattacks.com"
     on_stop: integrates_deploy_back_ephemeral_stop
 
 integrates_deploy_back_ephemeral_stop:
