--- a/integrates/django-apps/integrates-back-async/setup.cfg
+++ b/integrates/django-apps/integrates-back-async/setup.cfg
@@ -2,7 +2,7 @@
 name = integrates-back-async
 description = Integrates Backend Async
 long_description = file: README.rst
-url = https://fluidattacks.com/integrates
+url = https://integrates.fluidattacks.com
 author = FluidAttacks Development Team
 author_email = development@fluidattacks.com
 license = Mozilla-2.0
