--- a/skims/pyproject.toml
+++ b/skims/pyproject.toml
@@ -44,12 +44,14 @@ aiofiles = "0.5.0"
 aiogqlc = "2.0.0b1"
 aiohttp = "3.6.2"
 bugsnag = "3.8.0"
+cfn-flip = "1.2.3"
 click = "7.1.2"
 confuse = "1.3.0"
 frozendict = "1.2"
 jmespath = "0.10.0"
 lark-parser = "0.9.0"
 more-itertools = "8.4.0"
+oyaml = "0.9"
 pillow = "7.2.0"
 pyparsing = "2.4.7"
 python = "^3.8"
