integrates\fix(front): #3087 add fingerprint permission
- which is required by android versions previous to 9


Former-commit-id: 62e00bd3f91d6ce58d582a808849a58c80edbab9

--- a/integrates/mobile/app.json
+++ b/integrates/mobile/app.json
@@ -8,7 +8,7 @@
       "googleServicesFile": "./google-services.json",
       "icon": "./assets/icon.png",
       "package": "com.fluidattacks.integrates",
-      "permissions": [],
+      "permissions": ["USE_FINGERPRINT"],
       "playStoreUrl": "https://play.google.com/store/apps/details?id=com.fluidattacks.integrates",
       "versionCode": 0
     },
