skims\feat(back): #2975.247 cfn iam managed policy
- Add unbuffered io to skims binary
- Add support to parse statements from iam
  managed policies
- Add tests


Former-commit-id: eaa9b34155681c7e44b3e782f1d5d71498507080

--- a/skims/test/data/parse_cfn/full.yaml
+++ b/skims/test/data/parse_cfn/full.yaml
@@ -9,6 +9,27 @@ Parameters:
 
 Resources:
 
+  AWSManagedPolicy1:
+    Type: AWS::IAM::ManagedPolicy
+    Properties:
+      PolicyDocument:
+        Version: '2012-10-17'
+        Statement:
+        - Effect: Allow
+          Action:
+            - s3:ListBucket
+            - s3:GetBucketLocation
+          Resource:
+            Fn::Sub: arn:aws:s3:::${pS3RestoreBucket}
+        - Effect: Allow
+          Action:
+            - s3:GetObjectMetaData
+            - s3:GetObject
+            - s3:PutObject
+            - s3:ListMultipartUploadParts
+            - s3:AbortMultipartUpload
+          Resource: '*'
+
   AWSIamRole1:
     Type: AWS::IAM::Role
     Properties:
