--- a/skims/test/data/parse_cfn/full.yaml
+++ b/skims/test/data/parse_cfn/full.yaml
@@ -1,5 +1,5 @@
 ---
-AWSTemplateFormatVersion: 2010-09-09
+AWSTemplateFormatVersion: '2010-09-09'
 Description: test
 Parameters:
 
@@ -9,58 +9,75 @@ Parameters:
 
 Resources:
 
-  AWSManagedPolicy1:
+  AWS_IAM_ManagedPolicy_1:
     Type: AWS::IAM::ManagedPolicy
     Properties:
       PolicyDocument:
         Version: '2012-10-17'
         Statement:
-        - Effect: Allow
-          Action:
-            - s3:ListBucket
-            - s3:GetBucketLocation
-          Resource:
-            Fn::Sub: arn:aws:s3:::${pS3RestoreBucket}
-        - Effect: Allow
-          Action:
-            - s3:GetObjectMetaData
-            - s3:GetObject
-            - s3:PutObject
-            - s3:ListMultipartUploadParts
-            - s3:AbortMultipartUpload
-          Resource: '*'
+          - Effect: Allow
+            Action:
+              - s3:ListBucket
+              - s3:GetBucketLocation
+            Resource:
+              Fn::Sub: arn:aws:s3:::${pS3RestoreBucket}
+          - Effect: Allow
+            Action:
+              - s3:GetObjectMetaData
+              - s3:GetObject
+              - s3:PutObject
+              - s3:ListMultipartUploadParts
+              - s3:AbortMultipartUpload
+            Resource: '*'
 
-  AWSIamRole1:
+  AWS_IAM_Role_1:
     Type: AWS::IAM::Role
     Properties:
       Policies:
-      - PolicyDocument:
-          Statement:
-          - Action:
-            - logs:CreateLogStream
-            - logs:CreateLogGroup
-            - logs:PutLogEvents
-            Effect: Allow
-            Resource:
-            - arn:aws:logs:*:*:*
-          Version: '2012-10-17'
-      - PolicyDocument:
-          Statement:
-          - Action:
-            - comprehend:Detect*
-            - comprehend:BatchDetect*
-            Effect: Allow
-            Resource: '*'
-          Version: '2012-10-17'
+        - PolicyDocument:
+            Statement:
+              - Action:
+                  - logs:CreateLogStream
+                  - logs:CreateLogGroup
+                  - logs:PutLogEvents
+                Effect: Allow
+                Resource:
+                  - arn:aws:logs:*:*:*
+            Version: '2012-10-17'
+        - PolicyDocument:
+            Statement:
+              - Action:
+                  - comprehend:Detect*
+                  - comprehend:BatchDetect*
+                Effect: Allow
+                Resource: '*'
+            Version: '2012-10-17'
 
-  AWSPolicy1:
+  AWS_IAM_Policy_1:
     Type: AWS::IAM::Policy
     Properties:
       PolicyDocument:
         Version: '2012-10-17'
         Statement:
-          - Effect: 'Allow'
+          - Effect: Allow
             Action:
-            - s3:ListBucket
-            - s3:GetBucketLocation
+              - s3:ListBucket
+              - s3:GetBucketLocation
             Resource: '*'
+
+  AWS_IAM_User_1:
+    Type: AWS::IAM::User
+    Properties:
+      Policies:
+        - PolicyDocument:
+            Version: '2012-10-17'
+            Statement:
+              - Effect: Deny
+                Action: '*'
+                Resource: '*'
+                Condition:
+                  StringNotEquals:
+                    aws:RequestedRegion: us-east-1
+              - Effect: Allow
+                Action: sts:AssumeRole
+                Resource: arn:aws:iam::*:role/cloud-lambda
