integrates\refac(back): #159.1 improve api structure
- moved schema files to their own directory
- each with their sdl file and ariadne mappings
- this will allow for easier and clearer api changes


Former-commit-id: 19fe1ff867f2ba468ecd2af293367ae1509ef248

--- a/integrates/django-apps/integrates-back-async/MANIFEST.in
+++ b/integrates/django-apps/integrates-back-async/MANIFEST.in
@@ -1,5 +1,5 @@
 include LICENSE
 include README.rst
 include backend/entity/schema.yaml
-include backend/api/schemas/*
+include backend/api/schema/**/*.graphql
 include backend/domain/vuln_template.yaml
