integrates\feat(infra): #3032.53 prod probes
- Improve readiness probe for production
- Add liveness probe for production


Former-commit-id: dd2a8ac29fb727d68d38856852ea6b7e3754259d

--- a/integrates/deploy/production/deployment.yaml
+++ b/integrates/deploy/production/deployment.yaml
@@ -46,11 +46,15 @@ spec:
           - containerPort: 8080
         readinessProbe:
           exec:
-            command:
-              - sh
-              - -ce
-              - "curl -sS http://localhost:8080 | grep 'FluidIntegrates'"
-          initialDelaySeconds: 20
-          periodSeconds: 5
-          successThreshold: 3
-          failureThreshold: 10
+            command: [bash, deploy/production/readiness-probe.sh, run_readiness_probe]
+          initialDelaySeconds: 60
+          periodSeconds: 30
+          successThreshold: 1
+          failureThreshold: 20
+        livenessProbe:
+          exec:
+            command: [bash, deploy/production/readiness-probe.sh, run_liveness_probe]
+          initialDelaySeconds: 60
+          periodSeconds: 30
+          successThreshold: 1
+          failureThreshold: 20
