integrates\refac(infra): #3032.54 gunicorn workers
- Increase gunicorn workers based on the n * 2 + 1 equation
- Remove stop ephemeral job from master pipelines
- Make liveness probes use https


Former-commit-id: 4d6379519e226fc353927b8c6f5cf74e6aac3c8e

--- a/integrates/.gitlab-ci.yml
+++ b/integrates/.gitlab-ci.yml
@@ -261,13 +261,13 @@ integrates_deploy_back_ephemeral_stop:
     name: "ephemeral/$CI_COMMIT_REF_SLUG"
     action: stop
   rules:
-    - if: '$CI_PIPELINE_SOURCE == "master"'
-      when: never
-    - if: '$CI_PIPELINE_SOURCE == "trigger"'
+    - if: '$CI_COMMIT_BRANCH == "master"'
       when: never
     - if: '$CI_PIPELINE_SOURCE == "merge_request_event"'
       when: never
     - if: '$CI_PIPELINE_SOURCE == "schedule"'
+      when: never
+    - if: '$CI_PIPELINE_SOURCE == "trigger"'
       when: never
     - if: *integrates_commit_pattern
       when: manual
