skims\refac(back): #2975.254 improve dag
Former-commit-id: 61ec660eed564a10c3634b47798e1576315159a2

--- a/skims/pyproject.toml
+++ b/skims/pyproject.toml
@@ -31,6 +31,7 @@ packages = [
   { include = "parse_cfn", from = "skims" },
   { include = "parse_grammar", from = "skims" },
   { include = "parse_json", from = "skims" },
+  { include = "serialization", from = "skims" },
   { include = "state", from = "skims" },
   { include = "utils", from = "skims" },
   { include = "zone", from = "skims" },
