skims\refac(build): #2975.255 rename job
Former-commit-id: b0a8e5b1d7e6922b61447936d62082b2a80ad772

--- a/skims/.gitlab-ci.yml
+++ b/skims/.gitlab-ci.yml
@@ -51,7 +51,7 @@
     - ./build.sh skims_doc
   stage: deploy-app
 
-skims_deploy:
+skims_deploy_to_pypi:
   <<: *with_nix
   <<: *skims_in_master_branch
   stage: deploy-app
